--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -371,6 +371,7 @@
   <string name="AvatarSelectionBottomSheetDialogFragment__choose_from_gallery">Επιλογή απ\' την πινακοθήκη</string>
   <string name="AvatarSelectionBottomSheetDialogFragment__remove_photo">Αφαίρεση φωτογραφίας</string>
   <string name="AvatarSelectionBottomSheetDialogFragment__taking_a_photo_requires_the_camera_permission">Η λήψη φωτογραφίας απαιτεί την άδεια της κάμερας.</string>
+  <string name="AvatarSelectionBottomSheetDialogFragment__viewing_your_gallery_requires_the_storage_permission">Η προβολή της βιβλιοθήκης σου απαιτεί την άδεια αποθηκευτικού χώρου.</string>
   <!--DateUtils-->
   <string name="DateUtils_just_now">Τώρα</string>
   <string name="DateUtils_minutes_ago">%dλ</string>
