--- a/app/src/main/res/values-lt/strings.xml
+++ b/app/src/main/res/values-lt/strings.xml
@@ -399,6 +399,7 @@
   <string name="AvatarSelectionBottomSheetDialogFragment__choose_from_gallery">Pasirinkti iš galerijos</string>
   <string name="AvatarSelectionBottomSheetDialogFragment__remove_photo">Šalinti nuotrauką</string>
   <string name="AvatarSelectionBottomSheetDialogFragment__taking_a_photo_requires_the_camera_permission">Nuotraukos darymui reikia leidimo naudoti kamerą.</string>
+  <string name="AvatarSelectionBottomSheetDialogFragment__viewing_your_gallery_requires_the_storage_permission">Galerijos peržiūrai reikia leidimo naudoti saugyklą.</string>
   <!--DateUtils-->
   <string name="DateUtils_just_now">Dabar</string>
   <string name="DateUtils_minutes_ago">%d min.</string>
