--- a/app/src/main/res/values-nn/strings.xml
+++ b/app/src/main/res/values-nn/strings.xml
@@ -372,6 +372,7 @@ Viss kontoen din har lenka einingar, så vil nye notat bli synkroniserte.</strin
   <string name="AvatarSelectionBottomSheetDialogFragment__choose_from_gallery">Vel frå galleri</string>
   <string name="AvatarSelectionBottomSheetDialogFragment__remove_photo">Fjern bilde</string>
   <string name="AvatarSelectionBottomSheetDialogFragment__taking_a_photo_requires_the_camera_permission">Du må gi tillating til bruk av kameraet for å ta eit bilde.</string>
+  <string name="AvatarSelectionBottomSheetDialogFragment__viewing_your_gallery_requires_the_storage_permission">Du må gi tillating til bruk av lagring for å visa galleriet.</string>
   <!--DateUtils-->
   <string name="DateUtils_just_now">No</string>
   <string name="DateUtils_minutes_ago">%dm</string>
