--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -399,6 +399,7 @@
   <string name="AvatarSelectionBottomSheetDialogFragment__choose_from_gallery">Wybierz z galerii</string>
   <string name="AvatarSelectionBottomSheetDialogFragment__remove_photo">Usuń zdjęcie</string>
   <string name="AvatarSelectionBottomSheetDialogFragment__taking_a_photo_requires_the_camera_permission">Robienie zdjęć wymaga uprawnień do korzystania z aparatu.</string>
+  <string name="AvatarSelectionBottomSheetDialogFragment__viewing_your_gallery_requires_the_storage_permission">Przeglądanie galerii wymaga uprawnień dostępu do pamięci.</string>
   <!--DateUtils-->
   <string name="DateUtils_just_now">Teraz</string>
   <string name="DateUtils_minutes_ago">%dm</string>
