--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -357,6 +357,7 @@
   <string name="AvatarSelectionBottomSheetDialogFragment__choose_from_gallery">從圖片庫中選擇</string>
   <string name="AvatarSelectionBottomSheetDialogFragment__remove_photo">移除頭像照片</string>
   <string name="AvatarSelectionBottomSheetDialogFragment__taking_a_photo_requires_the_camera_permission">拍照需要相機權限。</string>
+  <string name="AvatarSelectionBottomSheetDialogFragment__viewing_your_gallery_requires_the_storage_permission">查看你的照片庫需要儲存權限。</string>
   <!--DateUtils-->
   <string name="DateUtils_just_now">現在</string>
   <string name="DateUtils_minutes_ago">%dm</string>
